Finalizzazione algoritmo di pathfiding